--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,20 @@
 /* You can add global styles to this file, and also import other style files */
+
+/* Importing Bootstrap SCSS file. */
+@import "~bootstrap/scss/bootstrap";
+
+/* Importing Datepicker SCSS file. */
+@import "node_modules/ngx-bootstrap/datepicker/bs-datepicker";
+
+
+.wrapper {
+  margin-bottom: 1.5rem;
+  width: 100%;
+  height: 1080px;
+}
+
+.wrapper2 {
+  background-position-y: bottom;
+  background-repeat: no-repeat;
+  background-image: url("./assets/images/online-learning-pana.svg") ;
+}
